Example usage of the macro

--- a/Testing/functional/tests.tex
+++ b/Testing/functional/tests.tex
@@ -1,1 +1,7 @@
 \subsection{Tests}
+\FuncReq
+{The title goes here}
+{Then the description. You will notice that a serial has automatically been generated above.}
+{Next the severity of the issue if the test has not passed. Otherwise we can simply state N/A}
+{The Score out of 10. Use your own discretion here.}
+{The status of the test. Pass or Fail}
