--- a/Testing/main.tex
+++ b/Testing/main.tex
@@ -46,7 +46,7 @@
 \newcommand{\NonFuncReq} [5]{
 \refstepcounter{NonFuncReqSerial}
 \noindent
-\textbf{Serial}:F\theNonFuncReqSerial\\
+\textbf{Serial}:NF\theNonFuncReqSerial\\
 \textbf{Title}: #1\\
 \textbf{Description}: #2\\
 \textbf{Severity}: #3\\
