Non-func Security aruba credentials

--- a/Testing/main.tex
+++ b/Testing/main.tex
@@ -43,6 +43,8 @@
     \textbf{Status}: #5\\
 }
 
+\newcounter{NonFuncReqSerial}
+
 \newcommand{\NonFuncReq} [5]{
 \refstepcounter{NonFuncReqSerial}
 \noindent
