--- a/Testing/non_functional/tests.tex
+++ b/Testing/non_functional/tests.tex
@@ -1,1 +1,7 @@
 \subsection{Tests}
+\NonFuncReq
+{Aruba Credentials}
+{Take note of lines 45-46 in ClientLoginWeb.java. The aruba credentails are embedded in the source code on a public repository, which is a security risk.}
+{Critical}
+{0}
+{Fail}
