Non-func Parametric settings

--- a/Testing/non_functional/tests.tex
+++ b/Testing/non_functional/tests.tex
@@ -1,7 +1,15 @@
 \subsection{Tests}
 \NonFuncReq
-{Aruba Credentials}
-{Take note of lines 45-46 in ClientLoginWeb.java. The aruba credentails are embedded in the source code on a public repository, which is a security risk.}
+{Security: Aruba Credentials}
+{Take note of lines 45-46 in ClientLoginWeb.java. The Aruba credentails are embedded in the source code on a public repository, which is a big security risk.}
 {Critical}
 {0}
 {Fail}
+
+{Ease of deployment: Parametric settings}
+{Settings such as the hostname and credentials are hardcoded instead of a settings file or program arguments.}
+{Low}
+{0}
+{Fail}
+
+
