Added deployment Framework
Added deployment Framework test. Open for comment if misinterpreted

--- a/Testing/non_functional/tests.tex
+++ b/Testing/non_functional/tests.tex
@@ -12,4 +12,10 @@
 {0}
 {Fail}
 
+{Deployment Framework}
+{Maven was used to manage dependencies. This means the project can be compiled into a single jar file for execution by external entities.}
+{Low}
+{10}
+{Pass}
+
 
