--- a/Testing/non_functional/tests.tex
+++ b/Testing/non_functional/tests.tex
@@ -18,4 +18,8 @@
 {10}
 {Pass}
 
-
+{Concurrency}
+{The project fails to write to the same file concurrently. No  concurrent mechanisms are put in place.}
+{Low}
+{0}
+{Fail}
