Fixed spelling errors

--- a/Testing/functional/tests.tex
+++ b/Testing/functional/tests.tex
@@ -91,7 +91,7 @@ java.lang.RuntimeException: Could not forward element to next operator");}} .}
 			\begin{figure}[h]
 				\centering
 				\includegraphics{functional/images/wrong_mac.jpg}
-				\caption{EmprtyLocation Returned}
+				\caption{Empty Location Returned}
 				\label{fig:LocationReturned}
 			\end{figure}
 }
@@ -105,7 +105,7 @@ java.lang.RuntimeException: Could not forward element to next operator");}} .}
 			\begin{figure}[h]
 				\centering
 				\includegraphics{functional/images/wrong_mac.jpg}
-				\caption{EmprtyLocation Returned}
+				\caption{Empty Location Returned}
 				\label{fig:LocationReturned}
 			\end{figure}
 }
