--- a/Testing/functional/introduction.tex
+++ b/Testing/functional/introduction.tex
@@ -1,1 +1,2 @@
 \subsection{Introduction}
+The functional requirements specify the behaviour of the system. It consists of the abilities that the system must have to be considered functional. The main purpose of the subsystem, whether it will be able to return the location (relevant to a connected Wi-Fi hotspot) of a device with a given MAC address, will be tested. Testing will also include error checking and handling for various components of the subsystem including the Aruba Location Engine, Apache Flink and Json queries.  
