--- a/Testing/non_functional/introduction.tex
+++ b/Testing/non_functional/introduction.tex
@@ -1,1 +1,2 @@
 \subsection{Introduction}
+The non-functional requirements specify criteria that can be used to judge the operation of a system, rather than specific behaviours. The non-functional requirements consist of requirements which do not affect the behaviour of the system such as security of sensitive content, implementation of concurrency mechanisms for performance as well as efficacy and ease of the deployment frameworks implemented.
