--- a/Testing/introduction.tex
+++ b/Testing/introduction.tex
@@ -1,3 +1,3 @@
 \section{Introduction}
-This document specifies the steps taken to test the Gladius Implementation of the data subsystem. The data subsystem was required to return a devices location based on its MAC address. The location returned would be the x and y coordinates of the connected device (based on its MAC address) relevant to the Wi-Fi hotspot it is connected to at the time of request. Testing consisted of functional and non-functional requirement tests, with each test case having a description, severity level, a mark obtained out of 10 and a status which may either be Pass or Fail.
+This document specifies the steps taken to test the Gladius Implementation of the data subsystem. The data subsystem was required to return a device's location based on its MAC address. The location returned would be the x and y coordinates of the connected device (based on its MAC address) relevant to the Wi-Fi hotspot it is connected to at the time of request. Testing consisted of functional and non-functional requirement tests, with each test case having a description, severity level, a mark obtained out of 10 and a status which may either be Pass or Fail.
 
